@@ -16,18 +16,28 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 #include "triangle_mesh_viewer.h"
-
+#include <sstream>
+#include <qcursor.h>
 
 TriangleMeshViewer::TriangleMeshViewer(QWidget* parent,const ParametersRender* param,const TriangleMesh* mesh)
   :QGrid(2,Qt::Horizontal,parent)
   ,parameters(param)
-  ,camera_position(-4.5f,0.0f,0.0f)
+  ,camera_position(-3.0f,0.0f,0.0f)
   ,camera_forward(1.0f,0.0f,0.0f)
   ,camera_up(0.0f,0.0f,1.0f)
   ,camera_velocity(0.0f)
-  ,object_tilt(0.0f)
+  ,camera_yaw_rate(0.0f)
+  ,camera_pitch_rate(0.0f)
+  ,camera_roll_rate(0.0f)
+  ,object_tilt(-30.0f*M_PI/180.0f)
   ,object_rotation(0.0f)
   ,object_spinrate(0.0f)
+  ,keypressed_arrow_left(false)
+  ,keypressed_arrow_right(false)
+  ,keypressed_arrow_up(false)
+  ,keypressed_arrow_down(false)
+  ,keypressed_mouse_left(false)
+  ,keypressed_mouse_right(false)
   ,fly_mode(false)
 {
   setSpacing(5);
@@ -37,7 +47,7 @@ TriangleMeshViewer::TriangleMeshViewer(QWidget* parent,const ParametersRender* p
   tilt_box=new QGroupBox(1,Qt::Horizontal,"Tilt",this);
   spinrate_box=new QGroupBox(1,Qt::Horizontal,"Spin Rate",this);
 
-  tilt_slider=new QSlider(-80,80,10, 0,Qt::Vertical,tilt_box);
+  tilt_slider=new QSlider(-80,80,10,-30,Qt::Vertical,tilt_box);
   spinrate_slider =new QSlider(-80,80,10, 0,Qt::Horizontal,spinrate_box);
 
   fly_button=new QPushButton("Fly",this);
@@ -50,6 +60,13 @@ TriangleMeshViewer::TriangleMeshViewer(QWidget* parent,const ParametersRender* p
 
   tilt_slider->setTracking(true);
   spinrate_slider->setTracking(true);
+
+  fly_info=new QLabel("-",this);
+  fly_info->hide();
+
+  //Calling setFocus() when switching to fly mode seems to avoid need for this, but do it anyway.
+  tilt_slider->setFocusPolicy(QWidget::NoFocus);
+  spinrate_slider->setFocusPolicy(QWidget::NoFocus);
 
   connect(
 	  tilt_slider,SIGNAL(valueChanged(int)),
@@ -72,6 +89,7 @@ TriangleMeshViewer::TriangleMeshViewer(QWidget* parent,const ParametersRender* p
   
   setMouseTracking(true);  // To get moves regardless of button state
   display->setMouseTracking(true);
+  setFocus();
 }
 
 TriangleMeshViewer::~TriangleMeshViewer()
@@ -79,36 +97,93 @@ TriangleMeshViewer::~TriangleMeshViewer()
 
 void TriangleMeshViewer::keyPressEvent(QKeyEvent* e)
 {
-  if (fly_mode && e->key()==Qt::Key_Escape)
+  if (fly_mode)
     {
-      unfly();
+      if (e->key()==Qt::Key_Escape) unfly();
+      else if (e->key()==Qt::Key_Left) keypressed_arrow_left=true;
+      else if (e->key()==Qt::Key_Right) keypressed_arrow_right=true;
+      else if (e->key()==Qt::Key_Up) keypressed_arrow_up=true;
+      else if (e->key()==Qt::Key_Down) keypressed_arrow_down=true;
+      else e->ignore();
     }
   else
     {
       e->ignore();
     }
 }
+
+void TriangleMeshViewer::keyReleaseEvent(QKeyEvent* e)
+{
+  if (fly_mode)
+    {
+      if (e->key()==Qt::Key_Left) keypressed_arrow_left=false;
+      else if (e->key()==Qt::Key_Right) keypressed_arrow_right=false;
+      else if (e->key()==Qt::Key_Up) keypressed_arrow_up=false;
+      else if (e->key()==Qt::Key_Down) keypressed_arrow_down=false;
+      else e->ignore();
+    }
+  else
+    {
+      e->ignore();
+    }
+}
+
+void TriangleMeshViewer::mousePressEvent(QMouseEvent* e)
+{
+  if (fly_mode)
+    {
+      if (e->button()==Qt::LeftButton) keypressed_mouse_left=true;
+      else if (e->button()==Qt::RightButton) keypressed_mouse_right=true;
+      else if (e->button()==Qt::MidButton) camera_velocity=0.0f;
+      else e->ignore();
+    }
+  else
+    {
+      e->ignore();
+    }
+}
+
+void TriangleMeshViewer::mouseReleaseEvent(QMouseEvent* e)
+{
+  if (fly_mode)
+    {
+      if (e->button()==Qt::LeftButton) keypressed_mouse_left=false;
+      else if (e->button()==Qt::RightButton) keypressed_mouse_right=false;
+      else e->ignore();
+    }
+  else
+    {
+      e->ignore();
+    }
+}
+
+
+void TriangleMeshViewer::wheelEvent(QWheelEvent* e)
+{
+  if (fly_mode)
+    {
+      camera_velocity+=e->delta()*(0.03125f/480.0f);
+    }
+  else
+    {
+      e->ignore();
+    }
+}
+
+inline float signedsquare(float v) {return (v<0.0f ? -v*v : v*v);}
 
 void TriangleMeshViewer::mouseMoveEvent(QMouseEvent* e)
 {
   if (fly_mode)
     {
-      const float kt=1.0f/parameters->fps_target;
-      
-      const float nx=2.0*(e->pos().x()/static_cast<float>(size().width())-0.5f);
-      const float ny=2.0*(0.5f-e->pos().y()/static_cast<float>(size().height()));
-
-      //! \todo: Build proper rotation matrix, then apply to all vectors and re-normalize/orthognalize
-      const XYZ camera_right((camera_forward*camera_up).normalised());
-      camera_forward=(camera_forward+kt*nx*camera_right+kt*ny*camera_up).normalised();
-      camera_up=(camera_right*camera_forward).normalised();
+      camera_yaw_rate=4.0f*signedsquare(e->pos().x()/static_cast<float>(size().width())-0.5f);
+      camera_pitch_rate=4.0f*signedsquare(e->pos().y()/static_cast<float>(size().height())-0.5f);
     }
   else
     {
       e->ignore();
     }
 }
-
 
 void TriangleMeshViewer::set_mesh(const TriangleMesh* m)
 {
@@ -119,21 +194,28 @@ void TriangleMeshViewer::set_mesh(const TriangleMesh* m)
 void TriangleMeshViewer::fly()
 {
   fly_mode=true;
-  camera_velocity=0.1f;
+  camera_velocity=0.125f;
   spinrate_slider->setValue(0);
   tilt_box->hide();
   spinrate_box->hide();
   fly_button->hide();
+  fly_info->show();
   display->updateGeometry();
+  setFocus();
+  QCursor::setPos(mapToGlobal(QPoint(width()/2,height()/2)));
 }
 
 void TriangleMeshViewer::unfly()
 {
   fly_mode=false;
-  camera_position=XYZ(-4.5f,0.0f,0.0f);
+  camera_position=XYZ(-3.0f,0.0f,0.0f);
   camera_forward=XYZ(1.0f,0.0f,0.0f);
   camera_up=XYZ(0.0f,0.0f,1.0f);
   camera_velocity=0.0f;
+  camera_yaw_rate=0.0f;
+  camera_pitch_rate=0.0f;
+  camera_roll_rate=0.0f;
+  fly_info->hide();
   tilt_box->show();
   spinrate_box->show();
   fly_button->show();
@@ -142,12 +224,41 @@ void TriangleMeshViewer::unfly()
 
 void TriangleMeshViewer::tick()
 {
+  camera_roll_rate=0.0f;
+  if (keypressed_arrow_left || keypressed_mouse_left) camera_roll_rate+=0.25f;
+  if (keypressed_arrow_right || keypressed_mouse_right) camera_roll_rate-=0.25f;
+
+  if (keypressed_arrow_up) camera_velocity+=120.0f*(0.03125f/480.0f);
+  if (keypressed_arrow_down) camera_velocity-=120.0f*(0.03125f/480.0f);
+  
+
+  //! \todo Replace cheesy rotation hacks with proper rotation matrices
+
   const float kt=1.0f/parameters->fps_target;
+
+  XYZ camera_right=(camera_forward*camera_up).normalised();
+
+  const XYZ camera_right_rolled=camera_right+(kt*camera_roll_rate)*camera_up;
+  const XYZ camera_up_rolled=camera_up-(kt*camera_roll_rate)*camera_right;
+
+  camera_right=camera_right_rolled.normalised();
+  camera_up=camera_up_rolled.normalised();
+
+  camera_forward=(camera_forward+kt*camera_yaw_rate*camera_right+kt*camera_pitch_rate*camera_up).normalised();
+  camera_up=(camera_right*camera_forward).normalised();
 
   camera_position+=(kt*camera_velocity)*camera_forward;
   object_rotation+=object_spinrate*kt;
 
-  display->draw_frame(camera_position,camera_position+camera_forward,camera_up,object_rotation,object_tilt);
+  if (display->isVisible())
+    {
+      display->draw_frame(camera_position,camera_position+camera_forward,camera_up,object_rotation,object_tilt);
+    }
+
+  std::ostringstream msg;
+  msg << "Velocity: " << camera_velocity << "  Roll rate:" << camera_roll_rate << "\n";
+  msg << "Exit flight: [Esc]  Speed: up/down or mouse wheel  Roll: left/right keys or mouse buttons";
+  fly_info->setText(msg.str().c_str());
 }
 
 void TriangleMeshViewer::set_tilt(int v)
