@@ -4,6 +4,8 @@ From release 0.0.3:
  - Fix .inc filename bug (spurious ")
  - Update docs
  - Viewer to separate top-level.
+ - Don't burn CPU when OpenGL area not visible.
+ - Crude flight-simulator mode
 
 From release 0.0.1:
  - Bump version number to 0.0.3 (0.0.2 omitted docs)
